Fix: invisible tooltip

--- a/src/Components/Search/Search.module.css
+++ b/src/Components/Search/Search.module.css
@@ -98,7 +98,6 @@
   border-radius: 0.35rem;
   z-index: 1000;
   height: auto;
-  opacity: 0;
 }
 
 .tooltip {
